@@ -1,3 +1,7 @@
+2003-08-04 Jim Garlick <garlick@llnl.gov>
+
+    * src/client.c: clean up disconnect logic.
+
 2003-08-03 Jim Garlick <garlick@llnl.gov>
 
     * src/device*.c: move all retry logic to device.c and enforce backoff on
